feat: add get sandbox
