# api/router/sandbox.go
@@ -8,8 +8,9 @@ import (
 )
 
 func SandboxSetup(api fiber.Router) {
-	api.Post("/sandbox", middleware.Protected(), controller.CreateSandbox)
 	api.Get("/sandbox", middleware.Protected(), controller.GetUserSandboxes)
+	api.Get("/sandbox/:id", middleware.Protected(), controller.GetSandbox)
+	api.Post("/sandbox", middleware.Protected(), controller.CreateSandbox)
 	api.Put("/sandbox/:id", middleware.Protected(), controller.UpdateSandbox)
 	api.Delete("/sandbox/:id", middleware.Protected(), controller.DeleteSandbox)
 }
